add conference over mode

--- a/src/i18n/ar.yml
+++ b/src/i18n/ar.yml
@@ -199,6 +199,21 @@ cookies:
     نود استخدام التحليلات لمعرفة تجارب الناس في مؤتمر قمة الصليب الأحمر والهلال الأحمر للمناخ و لضمان قدرتنا على تحسين المؤتمرات الافتراضية ومؤتمرات القمة المستقبلية
     يمكنك تغيير تفضيلات ملفات تعريف الارتباط الخاصة بك من خلال النقر{0} في تذييل هذا الموقع
 
+oneToMany:
+  label: لغة الصوت
+  noVideo: لا يوجد فيديو متاح
+  muteLabel: 'ملاحظة: أذا أردت الاستماع الى الترجمة بلغة أخرى، تذكر أن تقوم بكتم صوت البث أعلاه '
+  stopped: ايقاف
+  playing: تشغيل
+  buffering: '{0} التحميل'
+  ready: جاهز للتشغيل
+  source: من الفيديو
+  start: ابدأ
+  stop: إيقاف
+
+videoEmbed:
+  noLive: البث المباشر غير متاح حاليًا ، يرجى إعادة التحقق لاحقًا.
+
 schedule:
   title: جدول المواعيد
   description: تصفح الجلسات المتاحة وقم بوضع خطة لتجربتك عن طريق إضافة تذكير إلى التقويم الخاص بك.
