--- a/src/content/atrium-active/en.mdx
+++ b/src/content/atrium-active/en.mdx
@@ -1,4 +1,7 @@
 import AtriumVideo from '@/components/AtriumVideo.vue'
+import ConferenceOver from '@/components/ConferenceOver.vue'
+
+<ConferenceOver />
 
 **Climate change affects everyone, everywhere - therefore no person, country or time zone is excluded from the virtual Climate:Red Summit, organised by the network of the International Federation of Red Cross and Red Crescent and open for everyone to join.**
 
