--- a/src/content/atrium/ar.mdx
+++ b/src/content/atrium/ar.mdx
@@ -1,4 +1,7 @@
 import AtriumVideo from '@/components/AtriumVideo.vue'
+import ConferenceOver from '@/components/ConferenceOver.vue'
+
+<ConferenceOver />
 
 **يؤثر تغير المناخ على الجميع في كل مكان. ولذا، لن يُستبعد أي بلد أو أي شخص أو أي منطقة زمنية من مؤتمر القمة الذي ستعقده شبكة الاتحاد الدولي للصليب الأحمر والهلال الأحمر. سترحب القمة بانضمام الجميع!**
 
