--- a/src/content/atrium/es.mdx
+++ b/src/content/atrium/es.mdx
@@ -1,4 +1,7 @@
 import AtriumVideo from '@/components/AtriumVideo.vue'
+import ConferenceOver from '@/components/ConferenceOver.vue'
+
+<ConferenceOver />
 
 **El cambio climático afecta a todos, en todas partes - por lo tanto, ninguna persona, país o zona horaria está excluida de la cumbre virtual Climate:Red, organizada por la red de la Federación Internacional de la Cruz Roja y de la Media Luna Roja y abierta para que todos participen.**
 
