--- a/src/content/atrium/fr.mdx
+++ b/src/content/atrium/fr.mdx
@@ -1,4 +1,7 @@
 import AtriumVideo from '@/components/AtriumVideo.vue'
+import ConferenceOver from '@/components/ConferenceOver.vue'
+
+<ConferenceOver />
 
 **Le changement climatique affecte chacun, partout - par conséquent, aucune personne, aucun pays ou aucun fuseau horaire n'est exclu du sommet Virtual Climate:Red, organisé par le réseau de La Fédération internationale de la Croix-Rouge et du Croissant-Rouge et ouvert à tous.**
 
