--- a/src/content/atrium/en.mdx
+++ b/src/content/atrium/en.mdx
@@ -7,7 +7,7 @@ import ConferenceOver from '@/components/ConferenceOver.vue'
 
 ---
 
-Our summit report has now been released: [Click here to download!]()
+Our summit report has now been released: [Click here to view & download!](https://edit.climate.red/uploads/2020-climate-red-summit-report-en-final.pdf)
 
 ---
 
