--- a/src/content/atrium-active/en.mdx
+++ b/src/content/atrium-active/en.mdx
@@ -3,6 +3,12 @@ import ConferenceOver from '@/components/ConferenceOver.vue'
 
 <ConferenceOver />
 
+---
+
+Our summit report has now been released: [Click here to view & download!](https://edit.climate.red/uploads/2020-climate-red-summit-report-en-final.pdf)
+
+---
+
 **Climate change affects everyone, everywhere - therefore no person, country or time zone is excluded from the virtual Climate:Red Summit, organised by the network of the International Federation of Red Cross and Red Crescent and open for everyone to join.**
 
 Climate:Red will bring together people from all around the world, creating a truly global platform to debate and inspire climate action.
