--- a/src/content/atrium/fr.mdx
+++ b/src/content/atrium/fr.mdx
@@ -3,6 +3,11 @@ import ConferenceOver from '@/components/ConferenceOver.vue'
 
 <ConferenceOver />
 
+---
+
+Notre rapport de sommet est maintenant publié: [Cliquez ici pour voir et télécharger!](https://edit.climate.red/uploads/2020-climate-red-summit-report-fr.pdf)
+
+---
 **Le changement climatique affecte chacun, partout - par conséquent, aucune personne, aucun pays ou aucun fuseau horaire n'est exclu du sommet Virtual Climate:Red, organisé par le réseau de La Fédération internationale de la Croix-Rouge et du Croissant-Rouge et ouvert à tous.**
 
 En réunissant des personnes du monde entier, nous créons une véritable plateforme mondiale pour débattre et inspirer l'action climatique.
