--- a/src/content/atrium/es.mdx
+++ b/src/content/atrium/es.mdx
@@ -3,6 +3,12 @@ import ConferenceOver from '@/components/ConferenceOver.vue'
 
 <ConferenceOver />
 
+---
+
+Nuestro informe de la cumbre ya ha sido publicado: [¡Haga clic aquí para ver y descargar!](https://edit.climate.red/uploads/2020-climate-red-summit-report-sp-copy.pdf)
+
+---
+
 **El cambio climático afecta a todos, en todas partes - por lo tanto, ninguna persona, país o zona horaria está excluida de la cumbre virtual Climate:Red, organizada por la red de la Federación Internacional de la Cruz Roja y de la Media Luna Roja y abierta para que todos participen.**
 
 Al reunir a personas de todo el mundo, creamos una plataforma verdaderamente global para debatir e inspirar la acción climática.
