--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -487,9 +487,63 @@ deconf:
     register: Register!
     unavailable: ' (Unavailable)'
 
+#
+# IFRC section
+#
 ifrc:
   general:
     backToAtrium: Back to Atrium
+
+  # This is a direct mapping from 'login'
+  login:
+    title: Login
+    infoText: We'll send you an email to confirm who you are. The email will
+      have a link in it which will log you in. It will expire after 30
+      minutes. If you don't recieve anything check your spam folder.
+    email:
+      label: Email
+      placeholder: e.g. geoff@example.com
+      help: The email address you registered to the conference with
+    badEmail: Bad email
+    doneText: Login code sent
+    submitButton: Request login code
+    registerLabel: Not registered yet?
+    registerAction: Register here
+
+  # This is a direct mapping from 'register'
+  register:
+    title: Register
+    infoText: Use this form to register for Climate:Red
+    name:
+      label: Full name
+      placeholder: e.g. Dan Howard
+      help: Your full name
+    email:
+      label: Your email address
+      placeholder: e.g. dan@example.com
+      help: You will use your email to log in to the virtual summit
+    language:
+      label: Language
+      help: We'll put the conference in this language for you
+    country:
+      label: Country
+      help: So we can see the reach of the conference
+    affiliation:
+      label: Your affiliation
+      placeholder: e.g. IFRC staff member
+      help: Affiliation with the RCRC movement (e.g. staff/volunteer/board member/member of national society/IFRC/ICRC/reference center/none)
+    submitButton: Register
+    consentText: I confirm that I have read and agree with the policies linked below
+    termsLink: Terms and Conditions
+    privacyLink: Privacy policy
+    doneText: |
+      Thanks for registering!
+      We've sent you an verification email.
+      Click the link in that email to verify and see the conference schedule.
+      If you don't see an email soon please check your spam folder.
+    loginLabel: Already registered?
+    loginAction: Log in here
+
   footer:
     appName: PlanetRed
     privacy: Privacy
