--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -31,73 +31,6 @@ atrium:
   conferenceOver: |
     Climate:Red has now ended, but it's not over! You can still access the sessions and keynotes on the schedule tab!
 
-login:
-  title: Login
-  infoText: We'll send you an email to confirm who you are. The email will
-    have a link in it which will log you in. It will expire after 30
-    minutes. If you don't recieve anything check your spam folder.
-  email:
-    label: Email
-    placeholder: e.g. geoff@example.com
-    help: The email address you registered to the conference with
-  badEmail: Bad email
-  doneText: Login code sent
-  submitButton: Request login code
-  registerLabel: Not registered yet?
-  registerAction: Register here
-
-register:
-  title: Register
-  infoText: Use this form to register for Climate:Red
-  name:
-    label: Full name
-    placeholder: e.g. Dan Howard
-    help: Your full name
-  email:
-    label: Your email address
-    placeholder: e.g. dan@example.com
-    help: You will use your email to log in to the virtual summit
-  language:
-    label: Language
-    help: We'll put the conference in this language for you
-  country:
-    label: Country
-    help: So we can see the reach of the conference
-  affiliation:
-    label: Your affiliation
-    placeholder: e.g. IFRC staff member
-    help: Affiliation with the RCRC movement (e.g. staff/volunteer/board member/member of national society/IFRC/ICRC/reference center/none)
-  submitButton: Register
-  consentText: I confirm that I have read and agree with the policies linked below
-  termsLink: Terms and Conditions
-  privacyLink: Privacy policy
-  doneText: |
-    Thanks for registering!
-    We've sent you an verification email.
-    Click the link in that email to verify and see the conference schedule.
-    If you don't see an email soon please check your spam folder.
-  loginLabel: Already registered?
-  loginAction: Log in here
-
-profile:
-  title: Your profile
-  emailText: Email
-  localeText: Chosen language
-  whenText: Logged in
-  registeredText: Registered
-  nameText: Name
-  countryText: Country
-  affiliationText: Affiliation
-  logoutButton: Log out
-  deleteButton: Delete account
-  deleteText: This is permenant, are you sure?
-  actionLabel: Actions
-  dangerLabel: Danger zone
-  translatorMessage: |
-    You are only a translator so do not have an atrium profile.
-    You can still register for the conference using the menu at the top,
-    then you can manage your profile here.
-
 sessions:
   title: What's on
   tabs:
@@ -163,17 +96,17 @@ notFound:
   title: Page not found
   info: We couldn't find the page you were looking for, please check the link you clicked or go back to the atrium.
 
-terms:
-  title: Terms
+# terms:
+#   title: Terms
 
-guidelines:
-  title: Guidelines
+# guidelines:
+#   title: Guidelines
 
-privacy:
-  title: Privacy
+# privacy:
+#   title: Privacy
 
-sessionCard:
-  hostedBy: Hosted by
+# sessionCard:
+#   hostedBy: Hosted by
 
 data:
   type:
@@ -492,17 +425,20 @@ deconf:
 #
 ifrc:
   general:
+    appName: PlanetRed
     backToAtrium: Back to Atrium
+    notSelected: (Please select)
+    genericError: Something went wrong, please try again
 
-  # This is a direct mapping from 'login'
   login:
     title: Login
-    infoText: We'll send you an email to confirm who you are. The email will
+    infoText: >
+      We'll send you an email to confirm who you are. The email will
       have a link in it which will log you in. It will expire after 30
       minutes. If you don't recieve anything check your spam folder.
     email:
       label: Email
-      placeholder: e.g. geoff@example.com
+      placeholder: e.g. dan@example.com
       help: The email address you registered to the conference with
     badEmail: Bad email
     doneText: Login code sent
@@ -510,10 +446,10 @@ ifrc:
     registerLabel: Not registered yet?
     registerAction: Register here
 
-  # This is a direct mapping from 'register'
   register:
     title: Register
-    infoText: Use this form to register for Climate:Red
+    infoText: >
+      Use this form to register for Climate:Red
     name:
       label: Full name
       placeholder: e.g. Dan Howard
@@ -536,13 +472,25 @@ ifrc:
     consentText: I confirm that I have read and agree with the policies linked below
     termsLink: Terms and Conditions
     privacyLink: Privacy policy
-    doneText: |
-      Thanks for registering!
-      We've sent you an verification email.
-      Click the link in that email to verify and see the conference schedule.
-      If you don't see an email soon please check your spam folder.
+    doneText: >
+      Thanks for registering! We've sent you an verification email. Click the link in that email to verify and see the conference schedule. If you don't see an email soon please check your spam folder.
     loginLabel: Already registered?
     loginAction: Log in here
+
+  profile:
+    title: Your profile
+    emailText: Email
+    localeText: Chosen language
+    whenText: Logged in
+    registeredText: Registered
+    nameText: Name
+    countryText: Country
+    affiliationText: Affiliation
+    logoutButton: Log out
+    deleteButton: Delete account
+    deleteText: This is permenant, are you sure?
+    actionLabel: Actions
+    dangerLabel: Danger zone
 
   footer:
     appName: PlanetRed
