--- a/src/i18n/fr.yml
+++ b/src/i18n/fr.yml
@@ -29,58 +29,6 @@ atrium:
   # conferenceOver: |
   #   _
 
-login:
-  title: Connexion
-  infoText: Après votre inscription, nous vous enverrons un email de confirmation. L'e-mail contiendra un lien qui vous connectera. Le lien expirera au bout de 30 minutes. Si vous ne recevez rien, veuillez vérifier votre dossier “Courriers indésirables”.
-  email:
-    label: Adresse E-mail
-    placeholder: 'par exemple: geoff@example.com'
-    help: L'adresse e-mail avec laquelle vous vous êtes inscrit à la conférence
-  submitButton: Demander un code de connexion
-  doneText: Código de inicio de sesión enviado
-  badEmail: Mauvais e-mail
-
-register:
-  title: Inscrivez
-  infoText: Inscrivez-vous à Climate:Red
-  name:
-    label: Nom complet
-    placeholder: 'par exemple: Dan Howard'
-    help: Votre nom complet
-  email:
-    label: l'adresse email
-    placeholder: 'par exemple: dan@example.com'
-    help: Vous utiliserez votre e-mail pour vous connecter à la conférence
-  language:
-    label: Langue
-    help: Ce sera votre langue principale pour la conférence
-  country:
-    label: Pays
-    help: Pour que nous puissions voir la portée de la conférence
-  affiliation:
-    label: Votre affiliation
-    placeholder: 'par exemple: Membre du personnel de la FICR'
-    help: Affiliation au mouvement Croix-Rouge Croissant-Rouge (par exemple, personnel / bénévole / membre du conseil d'administration / membre d’une Société nationale / FICR / CICR / centre de référence; ou aucun)
-  consentText: Je confirme avoir lu et accepté les conditions liées ci-dessous
-  termsLink: Termes et conditions
-  privacyLink: Politique de confidentialité
-  submitButton: Inscrivez
-  doneText: Nous vous avons envoyé un e-mail de vérification.
-
-profile:
-  title: Votre profil
-  emailText: Votre adresse E-mail
-  localeText: Langue choisie
-  whenText: Connecté
-  # registeredText: Registered
-  nameText: Nom
-  countryText: Pays
-  affiliationText: Affiliation
-  logoutButton: Se déconnecter
-  deleteButton: Supprimer le compte
-  deleteText: C'est permanent, êtes-vous sûr?
-  # loadingText: Fetching profile
-
 sessions:
   title: Quoi de neuf
   tabs:
@@ -291,3 +239,87 @@ errors:
 
 faqs:
   title: FAQ
+
+#
+# v2 - deconf
+#
+deconf: {}
+
+#
+# v2 - IFRC
+#
+ifrc:
+  general:
+    # appName: PlanetRed
+    # backToAtrium: Back to Atrium
+    # notSelected: (Please select)
+    # genericError: Something went wrong, please try again
+
+  login:
+    title: Connexion
+    infoText: Après votre inscription, nous vous enverrons un email de confirmation. L'e-mail contiendra un lien qui vous connectera. Le lien expirera au bout de 30 minutes. Si vous ne recevez rien, veuillez vérifier votre dossier “Courriers indésirables”.
+    email:
+      label: Adresse E-mail
+      placeholder: 'par exemple: geoff@example.com'
+      help: L'adresse e-mail avec laquelle vous vous êtes inscrit à la conférence
+    badEmail: Mauvais e-mail
+    doneText: Código de inicio de sesión enviado
+    submitButton: Demander un code de connexion
+    # registerLabel: Not registered yet?
+    # registerAction: Register here
+    # genericError: Something went wrong, please try again
+
+  register:
+    title: Inscrivez
+    infoText: >
+      Inscrivez-vous à Climate:Red
+    name:
+      label: Nom complet
+      placeholder: 'par exemple: Dan Howard'
+      help: Votre nom complet
+    email:
+      label: l'adresse email
+      placeholder: 'par exemple: dan@example.com'
+      help: Vous utiliserez votre e-mail pour vous connecter à la conférence
+    language:
+      label: Langue
+      help: Ce sera votre langue principale pour la conférence
+    country:
+      label: Pays
+      help: Pour que nous puissions voir la portée de la conférence
+    affiliation:
+      label: Votre affiliation
+      placeholder: 'par exemple: Membre du personnel de la FICR'
+      help: Affiliation au mouvement Croix-Rouge Croissant-Rouge (par exemple, personnel / bénévole / membre du conseil d'administration / membre d’une Société nationale / FICR / CICR / centre de référence; ou aucun)
+    submitButton: Inscrivez
+    consentText: Je confirme avoir lu et accepté les conditions liées ci-dessous
+    termsLink: Termes et conditions
+    privacyLink: Politique de confidentialité
+    doneText: >
+      Nous vous avons envoyé un e-mail de vérification.
+    # loginLabel: Already registered?
+    # loginAction: Log in here
+
+  profile:
+    title: Votre profil
+    emailText: Votre adresse E-mail
+    localeText: Langue choisie
+    whenText: Connecté
+    # registeredText: Registered
+    nameText: Nom
+    countryText: Pays
+    affiliationText: Affiliation
+    logoutButton: Se déconnecter
+    deleteButton: Supprimer le compte
+    deleteText: C'est permanent, êtes-vous sûr?
+    # actionLabel: Actions
+    # dangerLabel: Danger zone
+
+  footer:
+    # appName: PlanetRed
+    # privacy: Privacy
+    # privacyUrl: /privacy
+    # guidelines: Community Guidelines
+    # guidelinesUrl: /guidelines
+    # terms: Terms & Conditions
+    # termsUrl: /terms
